--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.15",
+    "axios": "^1.6.8",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
