--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^2.1.3",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.6.8",
     "next": "14.2.3",
