--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
+    "openai": "^4.49.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
