--- a/package.json
+++ b/package.json
@@ -18,15 +18,13 @@
     "openai": "^4.49.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "react-icons": "^5.2.1"
+
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
