--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "openai": "^4.49.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
-
+    "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
