--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.1.3",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "openai": "^4.49.1",
@@ -20,7 +22,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
