--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "nodemailer": "^6.9.13",
     "openai": "^4.49.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-slick": "^0.30.2",
