--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "lucide-react": "^0.400.0",
     "next": "^14.2.4",
     "nodemailer": "^6.9.13",
     "openai": "^4.49.1",
@@ -23,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0"
   },
