--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.6.8",
@@ -25,6 +26,7 @@
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.400.0",
     "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "openai": "^4.49.1",
     "react": "^18.3.1",
