--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
