--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "shadcn-ui": "^0.9.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
